<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/fio"
        android:layout_width="373dp"
        android:layout_height="95dp"
        android:layout_x="19dp"
        android:layout_y="195dp"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="457dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_name"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText3"
                android:layout_width="106dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText2"
                android:layout_width="123dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="118dp"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:textAlignment="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="95dp"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_x="109dp"
        android:layout_y="519dp"
        android:text="@string/save" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="447dp" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="89dp"
        android:layout_y="324dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_x="114dp"
        android:layout_y="305dp"
        android:text="@string/faculty"
        android:textAlignment="center" />

    <TableRow
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_x="132dp"
        android:layout_y="427dp">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textAlignment="center" />
    </TableRow>

</AbsoluteLayout>