<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="95dp" />


    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="group number"
        android:inputType="number"
        android:textAlignment="center" />

    <TableLayout
        android:id="@+id/fio"
        android:layout_width="373dp"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="457dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/surname"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/middle_name"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText3"
                android:layout_width="106dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText2"
                android:layout_width="123dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="118dp"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="126dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:entries="@array/faculties"
        android:spinnerMode="dropdown" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="82dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>